k8config/django_deployment.yaml
#
# Deployment for the django application

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: app
        image: gcr.io/gioawesomesite/website-prod-app:1.7
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "cd website && gunicorn --bind=0.0.0.0:8000 website.wsgi:application"]
        ports:
        - containerPort: 8000
