k8config/nginx_deployment.yaml
#
# Deployment for the nginx server

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: web
        image: gcr.io/gioawesomesite/website-prod-web:1.4
        imagePullPolicy: Always
        ports:
        - containerPort: 80
