k8config/nginx_service.yaml
#
# Service to expose nginx to receive external
# traffic
# @deprecated Replaced by website_ingress.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    name: nginx-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector: # Which pods will be covered?
    app: nginx
