k8config/website_ingress.yaml
#
# Service and Ingress to expose nginx through public static ip

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: website-ip
    networking.gke.io/managed-certificates: website-certificate
    kubernetes.io/ingress.allow-http: "false"
  labels:
    name: nginx-ingress
spec:
  backend:
    serviceName: nginx-service
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    name: nginx-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector: # Which pods will be covered?
    app: nginx
